--- a/DualClassVoting/DualClassVoting/MainPage.xaml
+++ b/DualClassVoting/DualClassVoting/MainPage.xaml
@@ -21,25 +21,17 @@
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <Border Grid.Row="0" Grid.ColumnSpan="2" StrokeShape="RoundRectangle 8" WidthRequest="220" BackgroundColor="#13243E" Stroke="#13243E">
-                    <StackLayout Orientation="Horizontal">
-                        <Label Text="VISUAL CAPITALIST" Margin="8,4,0,4" TextColor="#CED2D3" FontSize="Caption" FontAttributes="Bold" />
-                        <Label Text="DATASTREAM" Margin="8,4,0,4" TextColor="#1DA6B0" FontSize="Caption"  FontAttributes="Bold"/>
-                    </StackLayout>
-                </Border>
-
-                <StackLayout  Grid.Row="1" Grid.ColumnSpan="2" HorizontalOptions="Center" Margin="{OnPlatform Android='40,10,0,-10',iOS='40,10,0,-10',Default='40,10,0,-20'}">
+                <StackLayout  Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" Margin="{OnPlatform Android='40,10,0,-10',iOS='40,10,0,-10',Default='40,10,0,-20'}">
                     <Label Text="% of Dual Class" TextColor="#FFFFFF" FontSize="12"/>
                 </StackLayout>
 
                 <!--#region Chart 1 -->
 
-                <chart:SfCartesianChart Grid.Row="2" Grid.Column="0" IsTransposed="True" Margin="{OnPlatform WinUI='0,30,0,0',MacCatalyst='0,30,0,0'}">
+                <chart:SfCartesianChart Grid.Row="1" Grid.Column="0" IsTransposed="True" Margin="{OnPlatform WinUI='0,30,0,0',MacCatalyst='0,30,0,0'}">
 
                     <chart:SfCartesianChart.XAxes>
                         <chart:CategoryAxis IsInversed="True" Interval="{OnPlatform Android=10,iOS=10,Default=5}" ShowMajorGridLines="False" IsVisible="False" PlotOffsetEnd="5">
@@ -65,28 +57,13 @@
 
                     <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="NonTechPercentage" Fill="#1DA6B0"/>
 
-                    <chart:SfCartesianChart.PlotAreaBackgroundView>
-                        <AbsoluteLayout>
-                            <StackLayout  AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="{OnPlatform Android='0,0,-1,-1',iOS='0,0,-1,-1',Default='0.07,0,-1,-1'}" >
-                                <Label Text="THE RISE OF" TextColor="#CED2D3" FontAttributes="Italic" FontSize="{OnPlatform Android=10,iOS=10}"/>
-                                <Label Text="DUAL" TextColor="#AFB433" FontAttributes="Bold,Italic" FontSize="{OnPlatform WinUI=Header,Default=Large}" 
-                                       Margin="{OnPlatform WinUI='-10,-10,0,-10',Default='-2,-2,0,-2'}"/>
-                                <Label Text="CLASS" TextColor="#FFFFFF" FontAttributes="Bold,Italic" FontSize="{OnPlatform WinUI=Header,Default=Large}" 
-                                       Margin="{OnPlatform WinUI='-10,-10,0,-8',Default='-2,-2,0,-2'}"/>
-                                <Label Text="SHARE STRUCTURES" TextColor="#CED2D3" FontAttributes="Italic" FontSize="{OnPlatform Android=10,iOS=10}"/>
-                            </StackLayout>
-                            <Label AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="{OnPlatform Android='0,0.6,-1,-1',iOS='0,0.6,-1,-1',Default='0.07,0.4,-1,-1'}"
-                                   Text="NON-TECH IPOS" TextColor="#1DA6B0" FontAttributes="Bold" FontSize="{OnPlatform Android=12,iOS=12,Default=Subtitle}"/>
-                        </AbsoluteLayout>
-                    </chart:SfCartesianChart.PlotAreaBackgroundView>
-
                 </chart:SfCartesianChart>
 
                 <!--#endregion-->
 
                 <!--#region Chart 2 -->
 
-                <chart:SfCartesianChart  Grid.Row="2" Grid.Column="1" IsTransposed="True" Margin="{OnPlatform WinUI='0,30,0,0',MacCatalyst='0,30,0,0'}">
+                <chart:SfCartesianChart  Grid.Row="1" Grid.Column="1" IsTransposed="True" Margin="{OnPlatform WinUI='0,30,0,0',MacCatalyst='0,30,0,0'}">
 
                     <chart:SfCartesianChart.XAxes >
                         <chart:CategoryAxis IsInversed="True" Interval="{OnPlatform Android=10,iOS=10,Default=5}" PlotOffsetEnd="5" ShowMajorGridLines="False">
@@ -103,12 +80,12 @@
                     </chart:SfCartesianChart.XAxes>
 
                     <chart:SfCartesianChart.YAxes>
-                        <chart:NumericalAxis CrossesAt="{Static x:Double.MaxValue}" PlotOffsetEnd="20" ShowMajorGridLines="True" Interval="10">
+                        <chart:NumericalAxis CrossesAt="{Static x:Double.MaxValue}" PlotOffsetEnd="20" Interval="10">
                             <chart:NumericalAxis.LabelStyle>
                                 <chart:ChartAxisLabelStyle TextColor="#FFFFFF" LabelFormat="0'%"/>
                             </chart:NumericalAxis.LabelStyle>
                             <chart:NumericalAxis.AxisLineStyle>
-                                <chart:ChartLineStyle StrokeWidth ="0"/>
+                                <chart:ChartLineStyle StrokeWidth ="0" />
                             </chart:NumericalAxis.AxisLineStyle>
                             <chart:NumericalAxis.MajorGridLineStyle>
                                 <chart:ChartLineStyle StrokeWidth="0.3"/>
@@ -122,9 +99,29 @@
                     <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="TechPercentage" Fill="#AFB433"/>
 
                     <chart:SfCartesianChart.PlotAreaBackgroundView>
-                        <AbsoluteLayout>
-                            <Label AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="{OnPlatform Android='0.5,0.6,-1,-1',iOS='0.5,0.6,-1,-1',Default='0.5,0.4,-1,-1'}"
-                                   Text="TECH IPOS" TextColor="#AFB433" FontAttributes="Bold" FontSize="{OnPlatform Android=12,iOS=12,Default=Subtitle}"/>
+                        <AbsoluteLayout >
+                            <Border BackgroundColor="#e8e1e1"  StrokeShape="RoundRectangle 8" WidthRequest="160" HeightRequest="100" 
+                                    AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="1,0,-1,-1">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                 
+                                    <Label  Grid.Row="0" Text="Dual Class IPOs" Margin="5" FontSize="Small" FontAttributes="Bold" />
+                                  
+                                    <StackLayout  Grid.Row="1" Orientation="Horizontal" Margin="15,0,0,0">
+                                        <BoxView Color="#1DA6B0" HeightRequest="12" WidthRequest="12" />
+                                        <Label Text="NON-TECH IPOS" FontSize="12" VerticalTextAlignment="Center" Margin="3" />
+                                    </StackLayout>
+
+                                    <StackLayout  Grid.Row="2" Orientation="Horizontal" Margin="15,0,0,0">
+                                        <BoxView Color="#AFB433" HeightRequest="12" WidthRequest="12" />
+                                        <Label Text="TECH IPOS" FontSize="12" VerticalTextAlignment="Center" Margin="3" />
+                                    </StackLayout>
+                                </Grid>
+                            </Border>
                         </AbsoluteLayout>
                     </chart:SfCartesianChart.PlotAreaBackgroundView>
 
@@ -132,7 +129,7 @@
 
                 <!--#endregion-->
 
-                <StackLayout Grid.Row="3" Grid.ColumnSpan="2" HorizontalOptions="Center" Margin="40,0,0,0">
+                <StackLayout Grid.Row="2" Grid.ColumnSpan="2" HorizontalOptions="Center" Margin="40,0,0,0">
                     <Label Text="% of Dual Class" TextColor="#FFFFFF" FontSize="12"/>
                 </StackLayout>
 
