--- a/DualClassVoting/DualClassVoting/MainPage.xaml
+++ b/DualClassVoting/DualClassVoting/MainPage.xaml
@@ -12,7 +12,6 @@
     <ContentPage.Content>
 
         <Border Padding="10,0,10,10"   StrokeShape="RoundRectangle 10" Margin="30" Background="#0A121F">
-
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -25,7 +24,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <StackLayout  Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" Margin="{OnPlatform Android='40,10,0,-10',iOS='40,10,0,-10',Default='40,10,0,-20'}">
+                <StackLayout  Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" Margin="40,10,0,-20">
                     <Label Text="% of Dual Class" TextColor="#FFFFFF" FontSize="12"/>
                 </StackLayout>
 
@@ -100,25 +99,25 @@
 
                     <chart:SfCartesianChart.PlotAreaBackgroundView>
                         <AbsoluteLayout >
-                            <Border BackgroundColor="#e8e1e1"  StrokeShape="RoundRectangle 8" WidthRequest="160" HeightRequest="100" 
-                                    AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="1,0,-1,-1">
+                            <Border BackgroundColor="#D1D8DB"  StrokeShape="RoundRectangle 8" WidthRequest="{OnPlatform Android=100,iOS=100,Default=150}" HeightRequest="{OnPlatform Android=75,iOS=75,Default=100}" 
+                                    AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.97,0,-1,-1">
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto"/>
                                         <RowDefinition Height="*"/>
                                         <RowDefinition Height="*"/>
                                     </Grid.RowDefinitions>
-                                 
-                                    <Label  Grid.Row="0" Text="Dual Class IPOs" Margin="5" FontSize="Small" FontAttributes="Bold" />
-                                  
+
+                                    <Label  Grid.Row="0" Text="Dual Class IPOs" Margin="4" FontSize="{OnPlatform Android=12,iOS=12,Default=Small}" FontAttributes="Bold" />
+
                                     <StackLayout  Grid.Row="1" Orientation="Horizontal" Margin="15,0,0,0">
-                                        <BoxView Color="#1DA6B0" HeightRequest="12" WidthRequest="12" />
-                                        <Label Text="NON-TECH IPOS" FontSize="12" VerticalTextAlignment="Center" Margin="3" />
+                                        <BoxView Color="#1DA6B0" HeightRequest="{OnPlatform Android=9,iOS=9,Default=12}" WidthRequest="{OnPlatform Android=9,iOS=9,Default=12}" />
+                                        <Label Text="NON-TECH" FontSize="{OnPlatform Android=9,iOS=9,Default=12}" VerticalTextAlignment="Center" Margin="2" />
                                     </StackLayout>
 
                                     <StackLayout  Grid.Row="2" Orientation="Horizontal" Margin="15,0,0,0">
-                                        <BoxView Color="#AFB433" HeightRequest="12" WidthRequest="12" />
-                                        <Label Text="TECH IPOS" FontSize="12" VerticalTextAlignment="Center" Margin="3" />
+                                        <BoxView Color="#AFB433" HeightRequest="{OnPlatform Android=9,iOS=9,Default=12}" WidthRequest="{OnPlatform Android=9,iOS=9,Default=12}" />
+                                        <Label Text="TECH" FontSize="{OnPlatform Android=9,iOS=9,Default=12}" VerticalTextAlignment="Center" Margin="2" />
                                     </StackLayout>
                                 </Grid>
                             </Border>
