--- a/DualClassVoting/DualClassVoting/MainPage.xaml
+++ b/DualClassVoting/DualClassVoting/MainPage.xaml
@@ -11,8 +11,8 @@
 
     <ContentPage.Content>
 
-        <Border Padding="10,0,10,10"   StrokeShape="RoundRectangle 10" Margin="30" Background="#0A121F">
-            <Grid>
+        <Border  StrokeShape="RoundRectangle 10" Margin="30">
+            <Grid BackgroundColor="Black">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
@@ -24,37 +24,44 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <StackLayout  Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" Margin="40,10,0,-20">
-                    <Label Text="% of Dual Class" TextColor="#FFFFFF" FontSize="12"/>
-                </StackLayout>
-
                 <!--#region Chart 1 -->
+                <Label  Grid.Row="0" Grid.ColumnSpan="2" Text="Dual Class Structure of IPOs" FontSize="Small" TextColor="White" HorizontalOptions="Center"/>
 
-                <chart:SfCartesianChart Grid.Row="1" Grid.Column="0" IsTransposed="True" Margin="{OnPlatform WinUI='0,30,0,0',MacCatalyst='0,30,0,0'}">
+                <chart:SfCartesianChart Grid.Row="1" Grid.Column="0" IsTransposed="True" Margin="{OnPlatform WinUI='0,20,0,0',MacCatalyst='0,20,0,0'}">
 
                     <chart:SfCartesianChart.XAxes>
-                        <chart:CategoryAxis IsInversed="True" Interval="{OnPlatform Android=10,iOS=10,Default=5}" ShowMajorGridLines="False" IsVisible="False" PlotOffsetEnd="5">
+                        <chart:CategoryAxis IsInversed="True" Interval="{OnPlatform Android=10,iOS=10,Default=5}" ShowMajorGridLines="False" PlotOffsetEnd="5" IsVisible="False">
+                            <chart:CategoryAxis.LabelStyle>
+                                <chart:ChartAxisLabelStyle FontSize="1"/>
+                            </chart:CategoryAxis.LabelStyle>
+                            <!--<chart:CategoryAxis.MajorTickStyle>
+                                <chart:ChartAxisTickStyle StrokeWidth="0"/>
+                            </chart:CategoryAxis.MajorTickStyle>-->
+                            <chart:CategoryAxis.AxisLineStyle>
+                                <chart:ChartLineStyle StrokeWidth ="0"/>
+                            </chart:CategoryAxis.AxisLineStyle>
+                       
                         </chart:CategoryAxis>
                     </chart:SfCartesianChart.XAxes>
 
                     <chart:SfCartesianChart.YAxes>
                         <chart:NumericalAxis IsInversed="True" CrossesAt="{Static x:Double.MaxValue}" PlotOffsetStart="20" PlotOffsetEnd="10" Interval="5">
                             <chart:NumericalAxis.LabelStyle>
-                                <chart:ChartAxisLabelStyle TextColor="#FFFFFF" LabelFormat="0'%"/>
+                                <chart:ChartAxisLabelStyle TextColor="White" LabelFormat="0'%"/>
                             </chart:NumericalAxis.LabelStyle>
                             <chart:NumericalAxis.AxisLineStyle>
                                 <chart:ChartLineStyle StrokeWidth ="0"/>
                             </chart:NumericalAxis.AxisLineStyle>
                             <chart:NumericalAxis.MajorGridLineStyle>
-                                <chart:ChartLineStyle StrokeWidth="0.3"/>
+                                <chart:ChartLineStyle StrokeWidth="0.8"/>
                             </chart:NumericalAxis.MajorGridLineStyle>
                             <chart:NumericalAxis.MajorTickStyle>
-                                <chart:ChartAxisTickStyle StrokeWidth="0.3"/>
+                                <chart:ChartAxisTickStyle StrokeWidth="0.8"/>
                             </chart:NumericalAxis.MajorTickStyle>
                         </chart:NumericalAxis>
                     </chart:SfCartesianChart.YAxes>
 
-                    <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="NonTechPercentage" Fill="#1DA6B0"/>
+                    <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="NonTechPercentage" Fill="#A13DDF"/>
 
                 </chart:SfCartesianChart>
 
@@ -62,12 +69,12 @@
 
                 <!--#region Chart 2 -->
 
-                <chart:SfCartesianChart  Grid.Row="1" Grid.Column="1" IsTransposed="True" Margin="{OnPlatform WinUI='0,30,0,0',MacCatalyst='0,30,0,0'}">
+                <chart:SfCartesianChart  Grid.Row="1" Grid.Column="1" IsTransposed="True" Margin="{OnPlatform WinUI='0,20,0,0',MacCatalyst='0,20,0,0'}">
 
                     <chart:SfCartesianChart.XAxes >
                         <chart:CategoryAxis IsInversed="True" Interval="{OnPlatform Android=10,iOS=10,Default=5}" PlotOffsetEnd="5" ShowMajorGridLines="False">
                             <chart:CategoryAxis.LabelStyle>
-                                <chart:ChartAxisLabelStyle TextColor="#FFFFFF"/>
+                                <chart:ChartAxisLabelStyle TextColor="White"/>
                             </chart:CategoryAxis.LabelStyle>
                             <chart:CategoryAxis.MajorTickStyle>
                                 <chart:ChartAxisTickStyle StrokeWidth="0"/>
@@ -81,58 +88,49 @@
                     <chart:SfCartesianChart.YAxes>
                         <chart:NumericalAxis CrossesAt="{Static x:Double.MaxValue}" PlotOffsetEnd="20" Interval="10">
                             <chart:NumericalAxis.LabelStyle>
-                                <chart:ChartAxisLabelStyle TextColor="#FFFFFF" LabelFormat="0'%"/>
+                                <chart:ChartAxisLabelStyle TextColor="White" LabelFormat="0'%"/>
                             </chart:NumericalAxis.LabelStyle>
                             <chart:NumericalAxis.AxisLineStyle>
-                                <chart:ChartLineStyle StrokeWidth ="0" />
+                                <chart:ChartLineStyle StrokeWidth ="0"/>
                             </chart:NumericalAxis.AxisLineStyle>
                             <chart:NumericalAxis.MajorGridLineStyle>
-                                <chart:ChartLineStyle StrokeWidth="0.3"/>
+                                <chart:ChartLineStyle StrokeWidth="0.8"/>
                             </chart:NumericalAxis.MajorGridLineStyle>
                             <chart:NumericalAxis.MajorTickStyle>
-                                <chart:ChartAxisTickStyle StrokeWidth="0.3"/>
+                                <chart:ChartAxisTickStyle StrokeWidth="0.8"/>
                             </chart:NumericalAxis.MajorTickStyle>
                         </chart:NumericalAxis>
                     </chart:SfCartesianChart.YAxes>
 
-                    <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="TechPercentage" Fill="#AFB433"/>
+                    <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="TechPercentage" Fill="#EFD02B"/>
 
-                    <chart:SfCartesianChart.PlotAreaBackgroundView>
-                        <AbsoluteLayout >
-                            <Border BackgroundColor="#D1D8DB"  StrokeShape="RoundRectangle 8" WidthRequest="{OnPlatform Android=100,iOS=100,Default=150}" HeightRequest="{OnPlatform Android=75,iOS=75,Default=100}" 
-                                    AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.97,0,-1,-1">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="*"/>
-                                    </Grid.RowDefinitions>
-
-                                    <Label  Grid.Row="0" Text="Dual Class IPOs" Margin="4" FontSize="{OnPlatform Android=12,iOS=12,Default=Small}" FontAttributes="Bold" />
-
-                                    <StackLayout  Grid.Row="1" Orientation="Horizontal" Margin="15,0,0,0">
-                                        <BoxView Color="#1DA6B0" HeightRequest="{OnPlatform Android=9,iOS=9,Default=12}" WidthRequest="{OnPlatform Android=9,iOS=9,Default=12}" />
-                                        <Label Text="NON-TECH" FontSize="{OnPlatform Android=9,iOS=9,Default=12}" VerticalTextAlignment="Center" Margin="2" />
-                                    </StackLayout>
-
-                                    <StackLayout  Grid.Row="2" Orientation="Horizontal" Margin="15,0,0,0">
-                                        <BoxView Color="#AFB433" HeightRequest="{OnPlatform Android=9,iOS=9,Default=12}" WidthRequest="{OnPlatform Android=9,iOS=9,Default=12}" />
-                                        <Label Text="TECH" FontSize="{OnPlatform Android=9,iOS=9,Default=12}" VerticalTextAlignment="Center" Margin="2" />
-                                    </StackLayout>
-                                </Grid>
-                            </Border>
-                        </AbsoluteLayout>
-                    </chart:SfCartesianChart.PlotAreaBackgroundView>
 
                 </chart:SfCartesianChart>
 
                 <!--#endregion-->
+                
+                <AbsoluteLayout  Grid.Row="2" Grid.ColumnSpan="2">
+                    <Label Text="NON-TECH" TextColor="#A13DDF" FontSize="12" FontAttributes="Bold" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.19,0.2,-1,-1"/>
+                    <Label Text="% of Dual Class" TextColor="White" FontSize="12" FontAttributes="Bold" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.53,0.2,-1,-1"/>
+                    <Label Text="TECH" TextColor="#EFD02B" FontSize="12" FontAttributes="Bold"  AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.81,0.2,-1,-1"/>
 
-                <StackLayout Grid.Row="2" Grid.ColumnSpan="2" HorizontalOptions="Center" Margin="40,0,0,0">
-                    <Label Text="% of Dual Class" TextColor="#FFFFFF" FontSize="12"/>
-                </StackLayout>
+                </AbsoluteLayout>
+                
+             
 
             </Grid>
         </Border>
     </ContentPage.Content>
 </ContentPage>
+
+
+
+
+
+
+
+
+
+
+
+
