--- a/DualClassVoting/DualClassVoting/MainPage.xaml
+++ b/DualClassVoting/DualClassVoting/MainPage.xaml
@@ -12,7 +12,7 @@
     <ContentPage.Content>
 
         <Border  StrokeShape="RoundRectangle 10" Margin="30">
-            <Grid BackgroundColor="#031a33">
+            <Grid Background="#DBDBDB">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
@@ -23,8 +23,8 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                
-                <Label  Grid.Row="0" Grid.ColumnSpan="2" Text="Dual Class Structure of IPOs" TextColor="#FFFFFF" FontSize="Medium"  HorizontalOptions="Center"/>
+
+                <Label  Grid.Row="0" Grid.ColumnSpan="2" Text="Dual Class Structure of IPOs" TextColor="#374151" FontSize="16"  HorizontalOptions="Center"/>
 
                 <!--#region Chart 1 -->
                 <chart:SfCartesianChart Grid.Row="1" Grid.Column="0" IsTransposed="True" Margin="{OnPlatform WinUI='0,20,0,0',MacCatalyst='0,20,0,0'}">
@@ -38,27 +38,33 @@
                             <chart:NumericalAxis.AxisLineStyle>
                                 <chart:ChartLineStyle StrokeWidth ="0"/>
                             </chart:NumericalAxis.AxisLineStyle>
+                            <chart:NumericalAxis.MajorTickStyle>
+                                <chart:ChartAxisTickStyle Stroke="#b0b3b8"/>
+                            </chart:NumericalAxis.MajorTickStyle>
+                            <chart:NumericalAxis.MinorTickStyle>
+                                <chart:ChartAxisTickStyle Stroke="#b0b3b8"/>
+                            </chart:NumericalAxis.MinorTickStyle>
                         </chart:NumericalAxis>
                     </chart:SfCartesianChart.XAxes>
 
                     <chart:SfCartesianChart.YAxes>
                         <chart:NumericalAxis IsInversed="True" CrossesAt="{Static x:Double.MaxValue}" PlotOffsetStart="20" Interval="5">
                             <chart:NumericalAxis.LabelStyle>
-                                <chart:ChartAxisLabelStyle LabelFormat="0'%" TextColor="#FFFFFF"/>
+                                <chart:ChartAxisLabelStyle LabelFormat="0'%" TextColor="#49454F" FontSize="12"/>
                             </chart:NumericalAxis.LabelStyle>
                             <chart:NumericalAxis.AxisLineStyle>
                                 <chart:ChartLineStyle StrokeWidth ="0"/>
                             </chart:NumericalAxis.AxisLineStyle>
                             <chart:NumericalAxis.MajorGridLineStyle>
-                                <chart:ChartLineStyle StrokeWidth="0.3"/>
+                                <chart:ChartLineStyle Stroke="#b0b3b8"/>
                             </chart:NumericalAxis.MajorGridLineStyle>
                             <chart:NumericalAxis.MajorTickStyle>
-                                <chart:ChartAxisTickStyle StrokeWidth="0.3"/>
+                                <chart:ChartAxisTickStyle Stroke="#b0b3b8"/>
                             </chart:NumericalAxis.MajorTickStyle>
                         </chart:NumericalAxis>
                     </chart:SfCartesianChart.YAxes>
 
-                    <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="NonTechPercentage" Fill="#A13DDF"/>
+                    <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="NonTechPercentage" Fill="#F247CC" />
 
                 </chart:SfCartesianChart>
 
@@ -72,42 +78,47 @@
                         <chart:NumericalAxis IsInversed="True" Interval="{OnPlatform Android=10,iOS=10,Default=5}" PlotOffsetEnd="5" ShowMajorGridLines="False"
                                              MinorTicksPerInterval="5" ShowMinorGridLines="False">
                             <chart:NumericalAxis.LabelStyle>
-                                <chart:ChartAxisLabelStyle TextColor="#FFFFFF"/>
+                                <chart:ChartAxisLabelStyle TextColor="#49454F" FontSize="12"/>
                             </chart:NumericalAxis.LabelStyle>
                             <chart:NumericalAxis.AxisLineStyle>
                                 <chart:ChartLineStyle StrokeWidth ="0"/>
                             </chart:NumericalAxis.AxisLineStyle>
+                            <chart:NumericalAxis.MajorTickStyle>
+                                <chart:ChartAxisTickStyle Stroke="#b0b3b8"/>
+                            </chart:NumericalAxis.MajorTickStyle>
+                            <chart:NumericalAxis.MinorTickStyle>
+                                <chart:ChartAxisTickStyle Stroke="#b0b3b8"/>
+                            </chart:NumericalAxis.MinorTickStyle>
                         </chart:NumericalAxis>
                     </chart:SfCartesianChart.XAxes>
 
                     <chart:SfCartesianChart.YAxes>
                         <chart:NumericalAxis CrossesAt="{Static x:Double.MaxValue}" PlotOffsetEnd="20" Interval="10">
                             <chart:NumericalAxis.LabelStyle>
-                                <chart:ChartAxisLabelStyle  LabelFormat="0'%" TextColor="#FFFFFF"/>
+                                <chart:ChartAxisLabelStyle  LabelFormat="0'%" TextColor="#49454F" FontSize="12"/>
                             </chart:NumericalAxis.LabelStyle>
                             <chart:NumericalAxis.AxisLineStyle>
                                 <chart:ChartLineStyle StrokeWidth ="0"/>
                             </chart:NumericalAxis.AxisLineStyle>
                             <chart:NumericalAxis.MajorGridLineStyle>
-                                <chart:ChartLineStyle StrokeWidth="0.3"/>
+                                <chart:ChartLineStyle Stroke="#b0b3b8"/>
                             </chart:NumericalAxis.MajorGridLineStyle>
                             <chart:NumericalAxis.MajorTickStyle>
-                                <chart:ChartAxisTickStyle StrokeWidth="0.3"/>
+                                <chart:ChartAxisTickStyle Stroke="#b0b3b8"/>
                             </chart:NumericalAxis.MajorTickStyle>
                         </chart:NumericalAxis>
                     </chart:SfCartesianChart.YAxes>
 
-                    <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="TechPercentage" Fill="#EFD02B"/>
-
+                    <chart:AreaSeries ItemsSource="{Binding VotingPercentage}" XBindingPath="Year" YBindingPath="TechPercentage" Fill="#2C9CEE" />
 
                 </chart:SfCartesianChart>
 
                 <!--#endregion-->
                 
                 <AbsoluteLayout  Grid.Row="2" Grid.ColumnSpan="2" Margin="0,5,0,0">
-                    <Label Text="NON-TECH" TextColor="#A13DDF" FontSize="{OnPlatform Android=13,iOS=13,Default=15}" FontAttributes="Bold" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.19,0.2,-1,-1"/>
-                    <Label Text="% of Dual Class" TextColor="#FFFFFF"  FontSize="{OnPlatform Android=14,iOS=14,Default=16}" FontAttributes="Bold" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.53,0.2,-1,-1"/>
-                    <Label Text="TECH" TextColor="#EFD02B" FontSize="{OnPlatform Android=13,iOS=13,Default=15}" FontAttributes="Bold"  AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.81,0.2,-1,-1"/>
+                    <Label Text="NON-TECH" TextColor="#F247CC" FontSize="12" FontAttributes="Bold" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.19,0.2,-1,-1"/>
+                    <Label Text="% of Dual Class" TextColor="#374151"  FontSize="13" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.52,0.2,-1,-1"/>
+                    <Label Text="TECH" TextColor="#2C9CEE" FontSize="12" FontAttributes="Bold"  AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.81,0.2,-1,-1"/>
                 </AbsoluteLayout>
 
             </Grid>
