--- a/DualClassVoting/DualClassVoting/MainPage.xaml
+++ b/DualClassVoting/DualClassVoting/MainPage.xaml
@@ -24,11 +24,10 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <Label  Grid.Row="0" Grid.ColumnSpan="2" Text="Dual Class Structure of IPOs" TextColor="#374151" FontSize="16"  HorizontalOptions="Center"/>
+                <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Dual Class Structure of IPOs" TextColor="#374151" FontSize="16" HorizontalOptions="Center"/>
 
                 <!--#region Chart 1 -->
-                <chart:SfCartesianChart Grid.Row="1" Grid.Column="0" IsTransposed="True" Margin="{OnPlatform WinUI='0,20,0,0',MacCatalyst='0,20,0,0'}">
-
+                <chart:SfCartesianChart Grid.Row="1" Grid.Column="0" IsTransposed="True" Margin="{OnPlatform Android=0,Default='0,20,0,0'}">
                     <chart:SfCartesianChart.XAxes>
                         <chart:NumericalAxis IsInversed="True" Interval="{OnPlatform Android=10,iOS=10,Default=5}" ShowMajorGridLines="False" PlotOffsetEnd="5" 
                                              MinorTicksPerInterval="5" ShowMinorGridLines="False">
@@ -72,9 +71,9 @@
 
                 <!--#region Chart 2 -->
 
-                <chart:SfCartesianChart  Grid.Row="1" Grid.Column="1" IsTransposed="True" Margin="{OnPlatform WinUI='0,20,0,0',MacCatalyst='0,20,0,0'}">
+                <chart:SfCartesianChart  Grid.Row="1" Grid.Column="1" IsTransposed="True" Margin="{OnPlatform Android=0,Default='0,20,0,0'}">
 
-                    <chart:SfCartesianChart.XAxes >
+                    <chart:SfCartesianChart.XAxes>
                         <chart:NumericalAxis IsInversed="True" Interval="{OnPlatform Android=10,iOS=10,Default=5}" PlotOffsetEnd="5" ShowMajorGridLines="False"
                                              MinorTicksPerInterval="5" ShowMinorGridLines="False">
                             <chart:NumericalAxis.LabelStyle>
@@ -115,9 +114,9 @@
 
                 <!--#endregion-->
                 
-                <AbsoluteLayout  Grid.Row="2" Grid.ColumnSpan="2" Margin="0,5,0,0">
+                <AbsoluteLayout Grid.Row="2" Grid.ColumnSpan="2" Margin="0,5,0,0">
                     <Label Text="NON-TECH" TextColor="#F247CC" FontSize="12" FontAttributes="Bold" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.19,0.2,-1,-1"/>
-                    <Label Text="% of Dual Class" TextColor="#374151"  FontSize="13" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.52,0.2,-1,-1"/>
+                    <Label Text="% of Dual Class" TextColor="#374151" FontSize="13" AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.52,0.2,-1,-1"/>
                     <Label Text="TECH" TextColor="#2C9CEE" FontSize="12" FontAttributes="Bold"  AbsoluteLayout.LayoutFlags="PositionProportional" AbsoluteLayout.LayoutBounds="0.81,0.2,-1,-1"/>
                 </AbsoluteLayout>
 
