--- a/DualClassVoting/DualClassVoting/AppShell.xaml
+++ b/DualClassVoting/DualClassVoting/AppShell.xaml
@@ -4,7 +4,8 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:DualClassVoting"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Disabled"
+    Title="DualClassVoting">
 
     <ShellContent
         ContentTemplate="{DataTemplate local:MainPage}"
